refactor(cors): remove hardcoded CORS origins for each controller and use common cors config using properties